--- a/sass/components/homepage/cee_here_for_modules/_responsive_menus.scss
+++ b/sass/components/homepage/cee_here_for_modules/_responsive_menus.scss
@@ -5,7 +5,16 @@ Uses Font-Awesome for the directional arrows
 
 /* Common styles of menus */
 
+//font size?
 $font-sizer: 1.3rem;
+//menu size is $menu-sizer
+//padding
+$paddar-v: 0.75%;
+$paddar-h: 2.5%;
+//line height
+$line-h :$font-sizer*1.3;
+
+
 
 //menu button colours
 $dlcol: $colouri;
@@ -20,6 +29,8 @@ $dlmenubak: $colouriv;
 	//menu items hover colours
 	$dlmenuhovcol: $colouriv;
 	$dlmenuhovbak: $colouriii;
+
+
 .dl-menuwrapper {
 	width: 100%;
 //	max-width: 300px;
@@ -73,7 +84,7 @@ $dlmenubak: $colouriv;
 		0 $menu_size2/4 0 $dlcol, 
 		0 $menu_size2/2 0 $dlcol;
 }
-// hover the menu
+// the menu menu
 .dl-menuwrapper {
 	button:hover {
 	background-color:$dlbakhover;
@@ -109,51 +120,60 @@ $dlmenubak: $colouriv;
 .dl-menuwrapper li a {
 	display: block;
 	position: relative;
-	padding: 1rem 2rem;
 	font-size: $font-sizer;
-	line-height: $font-sizer/2;
+	line-height:$line-h;
 	font-weight: 300;
 	outline: none;
 	text-decoration: none;
-	//background-color: $colourii;
+	padding: $paddar-v $paddar-h;
 }
 
 .no-touch .dl-menuwrapper li a:hover {
 	background: rgba(255,248,213,0.1);
 }
-
+// ----- the back button
 .dl-menuwrapper li.dl-back > a {
-	padding-left: 30px;
+//	padding-left: 8%;
 	background: rgba(0,0,0,0.1);
+//	:before {content: ' '}
+//	left: $paddar-h;
+	left: 0;
 }
 
+.dl-back > a:before {
+//add some spaces to resposively pad the "back"
+  content: "\00a0\00a0\00a0";
+}
+
+
+// ---- all the carets
 .dl-menuwrapper li.dl-back:after,
 .dl-menuwrapper li > a:not(:only-child):after {
 	position: absolute;
 	top: 0;
-	line-height: $font-sizer*2;
+	line-height: $line-h;
 	font-family: FontAwesome;
 	content: "\f0da";
-	font-size: $font-sizer*2;
+	font-size: $font-sizer*1.8;
+	padding: $paddar-v $paddar-h;
 }
 
+$caretspacing:0;
+// back caret
 .dl-menuwrapper li.dl-back:after {
-	left: .5rem;
-	//color: rgba(212,204,198,0.3);
+	left: $caretspacing;
 	-webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
 	transform: rotate(180deg);
 }
-
+// forward caret
 .dl-menuwrapper li > a:after {
-	right: 1rem;
+	right: $caretspacing;
 }
 
 .dl-menuwrapper .dl-menu {
 	margin: 0;
 	position: absolute;
-// 	rt width: auto;
-//	rt width: 100%;
 	opacity: 0;
 	pointer-events: none;
 	-webkit-transform: translateY(10px);
